syntax = "proto3";

package crocodile.srv.tasklog;

import "crocodile/service/executor/proto/executor/executor.proto";
import "google/protobuf/timestamp.proto";

service TaskLog {
	rpc CreateLog(SimpleLog)returns(Empty){}
	// 获取日志
	rpc GetLog(QueryLog)returns(RespLog){}
}

message TaskResLog {
	// 执行的任务信息
	crocodile.srv.executor.ExecuteMsg executemsg = 1;
	google.protobuf.Timestamp startTime = 2;
	google.protobuf.Timestamp endTime = 3;
	string output = 4;
	string err = 6;
}

message QueryLog {
	string taskname = 1;
	google.protobuf.Timestamp fromtime = 2;
	google.protobuf.Timestamp totime = 3;
	int32 limit = 4;
	int32 offset = 5;
}

message RespLog {
	repeated SimpleLog logs = 1;
	int32 count = 2;
}


message SimpleLog {
	uint64 id = 1;
	string taskname = 2;
	string command = 3;
	string cronexpr = 4;
	string createdby = 5;
	int32 timeout = 6;
	string actuator = 7;
	string runhost = 8;
	google.protobuf.Timestamp starttime = 9;
	google.protobuf.Timestamp endtime = 10;
	string output = 11;
	string err = 12;
}

message Empty {
}
